Dzianis_Zavoiskikh/09.Kubernetes_manifests/radarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: linuxserver/radarr
        ports:
        - containerPort: 7878
---
apiVersion: v1
kind: Service
metadata:
  name: radarr-web-service 
  labels:
    run: radarr-web-service
spec:
  type: LoadBalancer
  ports:
  - port: 7878
    protocol: TCP
  selector:
    app: radarr
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-sa
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: radarr.k8s-8.sa
    http:
      paths:
      - path: /
        backend:
          serviceName: radarr-web-service
          servicePort: 7878
