Dzianis_Zavoiskikh/09.Kubernetes_manifests/sonarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr
        ports:
        - containerPort: 8989
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-web-service 
  labels:
    run: sonarr-web-service
spec:
  type: LoadBalancer
  ports:
  - port: 8989
    protocol: TCP
  selector:
    app: sonarr
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-sa
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: sonarr.k8s-8.sa
    http:
      paths:
      - path: /
        backend:
          serviceName: sonarr-web-service
          servicePort: 8989
